# power-music-backend

./: .gitignore  Cargo.toml  README.md  openapi.json
.github/workflows/: test.yml
.hooks/: pre-commit
power-music-backend-derive/: Cargo.toml
power-music-backend-derive/src/: lib.rs
src/: catchers.rs  db.rs  lib.rs  main.rs  tests.rs
src/db/: mod.rs  playlist.rs
src/fairings/: auth.rs  cors.rs
src/guards/: auth.rs  merge.rs  mod.rs
src/providers/: common.rs  mod.rs  spotify.rs
src/routes/: merges.rs  mod.rs  playlists.rs  user.rs
ts-test/: .babelrc  .eslintignore  .eslintrc.json  .gitignore  LICENSE  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
ts-test/configs/: webpack.common.js  webpack.config.dev.js  webpack.config.prod.js
ts-test/src/: api.ts  index.test.ts
