[package]
name = "power-music-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version =  "0.5.0-rc.2", features = ["json"]}
ory-client = "1.1.1"
dotenv = "0.15.0"
reqwest = "0.11.13"
serde = "1.0.152"
surrealdb = {git = "https://github.com/surrealdb/surrealdb"}
rspotify = { version = "0.11.0", features = ["env-file"]}
rspotify-macros = "0.11.6"
google-youtube3 = "5.0.2-beta-1"
yup-oauth2 = "8.1.0"
hyper-tls = "0.5.0"
hyper = "0.14.23"
rocket_cors= "0.5.2"
async-trait = "0.1.61"
utoipa = {version = "2.4.2", features = ["rocket_extras"] }
lazy_static = "1.4.0"
async_once = "0.2.6"

[features]
strict = []
